# crispy-carnival

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  main.py  masks.py  processing.py  widget.py
src/generators/: data_generators.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
